# real-time-ml-system-cohort-1

./: .gitignore
docker-compose/: Makefile  feature-pipeline-historical.yaml  feature-pipeline.yaml  redpanda.yaml
services/kafka_to_feature_store/: Dockerfile  Makefile  pyproject.toml
services/kafka_to_feature_store/src/: config.py  hopsworks_api.py  main.py
services/trade_producer/: Dockerfile  Makefile  pyproject.toml
services/trade_producer/src/: config.py  kraken_api.py  main.py
services/trade_producer/src/kraken_api/: rest.py  trade.py  websocket.py
services/trade_to_ohlc/: Dockerfile  Makefile  pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py  ohlc.py  trade.py
