[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Fabio Scramim Rigo <fabio.s.rigo@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
quixstreams = "^2.8.1"
websocket-client = "^1.8.0"
loguru = "^0.7.2"
pydantic-settings = "^2.3"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["I"]